CHANGELOG

July 26th, 2010
  - Fixed a bug in arrayToXML to fix creating products with variants, images and options (thanks for the report and proposed fix by meeech! (http://github.com/meeech/))
  - Example array to create product with variants
    $fields = array(
        'product-type' => 'Product',
        'body-html' => 'This is some HTML for the Product',
        'title' => 'This is a title',
        'variants' => array(
            array(
                'price' => 10.00,
                'option1' => 'first'
            ),
            array(
              'price' => 11.00,
              'option1' => 'second'
            )
        )
    );

July 14th, 2010
  - Fixed a bug in Blog::remove -- missing $blog_id parameter

July 9th, 2010
  - Fixed some bugs in ApplicationCharge and RecurringApplicationCharge
  - Made some modifications to both ApplicationCharge::get, ApplicationCharge::activate, RecurringApplicationCharge::get, RecurringApplicationCharge::activate
    to make getting charges from the API easier, and the process of activation easier.

July 7th, 2010
  - Added some better error checking with XML results. An array will not be returned with errors if there is any.

June 30th, 2010
  - Added SSL support options
  - Added lib/cacert.pem to verify Shopify SSL certificates
  - Updated README
  
June 29th, 2010
  - Added GZIP_PATH to shopify_api_config
  - Added GZIP_ENABLED to enable or disable gzip compression

June 25th, 2010
  - Removed unnecessary parameters in Country::remove and Collect::remove
  - Added test for private applications

June 23rd, 2010
  - Added Order::remove to delete orders (missing functionality)
  - Added support for private applications. Your application secret is the password for your private application.

June 18th, 2010
  - Added SimpleTest autorun to test/shopify_api_test.php [daniellmb]
  - Removed test/index.php

June 17th, 2010
  - Fixed a typo in Webhook